--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -86,9 +86,8 @@
                   privacy policies, or practices of any third-party sites or
                   services.
                 </p> <p><strong>Children’s Privacy</strong></p> <p>
-                  These Services do not address anyone under the age of 13.
-                  We do not knowingly collect personally
-                  identifiable information from children under 13. In the case
+                  
+                  We do not knowingly collect sensitive personal information from children under 13. In the case
                   We discover that a child under 13 has provided
                   us with personal information, we immediately
                   delete this from our servers. If you are a parent or guardian
