Fix privacy policy

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -88,7 +88,7 @@
                 </p> <p><strong>Children’s Privacy</strong></p> <p>
                   
                   We do not knowingly collect sensitive personal information from children under 13. In the case
-                  We discover that a child under 13 has provided
+                  we discover that a child under 13 has provided
                   us with personal information, we immediately
                   delete this from our servers. If you are a parent or guardian
                   and you are aware that your child has provided us with
