--- a/prodoc/index.html
+++ b/prodoc/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="A made in India Document Scanner App" />
     <meta name="description" content="Scan and save important things anywhere and anytime and come back to it whenever you want">
     <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.aaindia.prodocscanner" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/awessamapps/awessamapps.github.io/master/feature_image_small.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/awessamapps/awessamapps.github.io/master/og_image.png">
     <meta property="og:type" content="website" />
 
     
