--- a/prodoc/assam/index.html
+++ b/prodoc/assam/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <script>
-window.location.assign("https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.aaindia.prodocscanner");
+window.location.href = "https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.aaindia.prodocscanner";
 
 </script>
 
