--- a/prodoc/redirect.html
+++ b/prodoc/redirect.html
@@ -19,7 +19,8 @@
 <body>
 
 <script>
-window.location.href ="https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.aaindia.prodocscanner";
+//window.location.href ="https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.aaindia.prodocscanner";
+    window.open('https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.aaindia.prodocscanner', '_blank')
 
 </script>
 
