--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -13,7 +13,7 @@
                   Awessam Apps at no cost and is intended for use as
                   is.
                 </p> <p>
-                  This page is used to inform visitors regarding my
+                  This page is used to inform visitors regarding our
                   policies with the collection, use, and disclosure of Personal
                   Information if anyone decided to use my Service.
                 </p> <p>
@@ -37,7 +37,7 @@
                   </p> <p>
                     Link to privacy policy of third party service providers used
                     by the app
-                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
+                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google Admob</a></li><!----><li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
                   We want to inform you that whenever you
                   use this Service, in a case of an error in the app
                   We collect data and information (through third party
