--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -80,8 +80,8 @@
                   This Service may contain links to other sites. If you click on
                   a third-party link, you will be directed to that site. Note
                   that these external sites are not operated by us.
-                  Therefore, I strongly advise you to review the
-                  Privacy Policy of these websites. I have
+                  Therefore, We strongly advise you to review the
+                  Privacy Policy of these websites. We have
                   no control over and assume no responsibility for the content,
                   privacy policies, or practices of any third-party sites or
                   services.
