--- a/prodoc/Assam/index.html
+++ b/prodoc/Assam/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta property="og:title" content="A made in ASSAM Document Scanner App" />
+    <meta property="og:title" content="A made in Assam Document Scanner App" />
     <meta name="description" content="Scan and save important things anywhere and anytime and come back to it whenever you want">
     <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.aaindia.prodocscanner" />
     <meta property="og:image" content="https://raw.githubusercontent.com/awessamapps/awessamapps.github.io/master/og_image.png">
@@ -19,7 +19,7 @@
 <body>
 
 <script>
-window.location.assign("https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.aaindia.prodocscanner");
+window.location.href = "https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.aaindia.prodocscanner";
 
 </script>
 
